--- a/Aula/style.css
+++ b/Aula/style.css
@@ -1,3 +1,86 @@
-header{color: #3dc4db;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
-body{background-color: blue;}
+
+body {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    line-height: 1, 6;
+    background-color: aliceblue;
+    color: black;
+
+}
+
+#cabechalho {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: skyblue;
+    color: black;
+    padding: 20px;
+    font-size: 30px;
+}
+
+.titulo {
+    font-size: 30px;
+}
+
+.nav {
+    color: aliceblue;
+    text-decoration: none;
+    margin-left: 15px;
+}
+
+.nav a:hover {
+    color: black;
+    font-weight: lighter;
+}
+
+.secao {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    padding: 40px 20px;
+    background-color: aliceblue;
+    color: black;
+}
+
+.matematica {
+    background-color: slategrey;
+
+    justify-content: space-evenly;
+    color: black;
+    border-radius: 8px;
+    padding: 20px;
+    margin: 10px;
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    font-size: 20px;
+
+
+}
+
+#footer {
+    display: flex;
+    justify-content: center;
+    background-color: black;
+    color: azure;
+    margin: 15px 30px;
+    padding: 20px
+}
+
+.container-titulo {
+    font-size: 20px;
+}
+
+#cabechaslho {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: skyblue;
+    color: black;
+    padding: 20px;
+    font-size: 30px;
+}
