--- a/Aula/style.css
+++ b/Aula/style.css
@@ -7,8 +7,9 @@
 body {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     line-height: 1, 6;
-    background-color: aliceblue;
+    background-color: #5e9188;
     color: black;
+    margin-bottom: 10px;
 
 }
 
@@ -16,10 +17,11 @@ body {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    background-color: skyblue;
+    background-color: #5e9188;
     color: black;
     padding: 20px;
     font-size: 30px;
+    margin-bottom: 10px;
 }
 
 .titulo {
@@ -27,7 +29,7 @@ body {
 }
 
 .nav {
-    color: aliceblue;
+    color: white;
     text-decoration: none;
     margin-left: 15px;
 }
@@ -35,6 +37,7 @@ body {
 .nav a:hover {
     color: black;
     font-weight: lighter;
+    text-decoration: none;
 }
 
 .secao {
@@ -42,12 +45,13 @@ body {
     justify-content: space-evenly;
     flex-wrap: wrap;
     padding: 40px 20px;
-    background-color: aliceblue;
+    background-color: #3e5954;
     color: black;
+    margin-bottom: 10px;
 }
 
 .matematica {
-    background-color: slategrey;
+    background-color: #5e9188;
 
     justify-content: space-evenly;
     color: black;
@@ -58,29 +62,64 @@ body {
     display: flex;
     flex-direction: column;
     font-size: 20px;
-
-
+    border: 5px;
+    text-align: center;
+    align-items: center;
+    margin-bottom: 10px;
 }
 
 #footer {
     display: flex;
     justify-content: center;
-    background-color: black;
-    color: azure;
+    background-color: #3e5954;
+    color: white;
     margin: 15px 30px;
     padding: 20px
 }
 
 .container-titulo {
     font-size: 20px;
+    margin-bottom: 10px;
 }
 
 #cabechaslho {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background-color: skyblue;
+    background-color: #5e9188;
     color: black;
     padding: 20px;
-    font-size: 30px;
+    font-size: medium;
+    margin-bottom: 10px;
+}
+
+.resposta {
+    border-radius: 8px;
+    padding: 45px;
+    margin: 10px 0px;
+    background-color: #3e5954;
+    text-align: center;
+    color: white;
+    margin-bottom: 10px;
+}
+
+table,
+th,
+td {
+    border: 1px solid;
+    border-radius: 1px;
+    color: black;
+}
+
+#foooter {
+    display: flex;
+    justify-content: center;
+    background-color: #3e5954;
+    color: black;
+    margin: 15px 30px;
+    padding: 20px
+}
+
+img {
+    border: #3e5954 solid 5px;
 }
